--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
 <title>HitGub test</title>
 </head>
 <body>
-<h1>Добро пожаловать!</h1>
-<p>Этот сайт принадлежит Айдару</p>
-<div>Здесь вы можете:</div>
-<i>-Смотреть на текст</i>
-<i>-Ничего не делать</i>
-<i>-Находится на сайте</i>
+<h1>Р”РѕР±СЂРѕ РїРѕР¶Р°Р»РѕРІР°С‚СЊ!</h1>
+<p>Р­С‚РѕС‚ СЃР°Р№С‚ РїСЂРёРЅР°РґР»РµР¶РёС‚ РђР№РґР°СЂСѓ</p>
+<div>Р—РґРµСЃСЊ РІС‹ РјРѕР¶РµС‚Рµ:</div>
+<i>-РЎРјРѕС‚СЂРµС‚СЊ РЅР° С‚РµРєСЃС‚</i>
+<i>-РќРёС‡РµРіРѕ РЅРµ РґРµР»Р°С‚СЊ</i>
+<i>-РќР°С…РѕРґРёС‚СЃСЏ РЅР° СЃР°Р№С‚Рµ</i>
 </body>
 </html>
